Fix deploy names

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,9 @@ workflows:
           executor: greenzie/debianize_arm64
 
       # Deployment jobs
-      - greenzie/deploy:
+      - greenzie/debian_deploy_experimental:
           name: "deploy_amd64_greenzie"
+          context: GREENZIE
           filters:
             branches:
               only:
@@ -34,8 +35,9 @@ workflows:
           requires:
             - amd_debian_build
 
-      - greenzie/deploy:
+      - greenzie/debian_deploy_experimental:
           name: "deploy_arm64_greenzie"
+          context: GREENZIE
           architecture: arm64
           filters:
             branches:
@@ -44,7 +46,7 @@ workflows:
           requires:
             - arm64_debian_build
 
-      - greenzie/deploy:
+      - greenzie/debian_deploy_experimental:
           name: "deploy_all_bobcat"
           server_hostname: bobcat
           filters:
@@ -69,7 +71,7 @@ workflows:
           platform: arm64
           executor: greenzie/debianize_arm64
 
-      - greenzie/deploy:
+      - greenzie/debian_deploy_experimental:
           context: GREENZIE
           name: "manual_deploy_all_bobcat"
           server_hostname: bobcat
