--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  greenzie: greenzie/build_and_publish_debs@dev:renamed_targz
+  greenzie: greenzie/build_and_publish_debs@0.0.7
 
 parameters:
   manual-bobcat-deploy:
