--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  greenzie: greenzie/build_and_publish_debs@0.0.2
+  greenzie: greenzie/build_and_publish_debs@volatile
 
 workflows:
   version: 2
@@ -19,32 +19,35 @@ workflows:
           executor: greenzie/debianize_arm64
 
       # Deployment jobs
-      - greenzie/deploy:
+      - greenzie/debian_deploy_experimental:
           name: "deploy_amd64_greenzie"
+          context: GREENZIE
           filters:
             branches:
               only:
-                - noetic
+                - << pipeline.parameters.filter-branch >>
           requires:
             - amd_debian_build
 
-      - greenzie/deploy:
-          name: "deploy_arm64_greenzie"
-          architecture: arm64
-          filters:
-            branches:
-              only:
-                - noetic
-          requires:
-            - arm64_debian_build
+     - greenzie/debian_deploy_experimental:
+         name: "deploy_arm64_greenzie"
+         context: GREENZIE
+         architecture: arm64
+         filters:
+           branches:
+             only:
+               - << pipeline.parameters.filter-branch >>
+         requires:
+           - arm64_debian_build
 
-      - greenzie/deploy:
+      - greenzie/debian_deploy_experimental:
           name: "deploy_all_bobcat"
+          context: GREENZIE
           server_hostname: bobcat
           filters:
             branches:
               only:
-                - noetic
+                - << pipeline.parameters.filter-branch >>
           requires:
-            - arm64_debian_build
+#            - arm64_debian_build
             - amd_debian_build
