--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,16 @@ version: 2.1
 orbs:
   greenzie: greenzie/build_and_publish_debs@volatile
 
+parameters:
+  manual-bobcat-deploy:
+    type: boolean
+    default: false
+  # Use this parameter to change the branch that the deployment jobs are triggered on
+  # It's useful for testing the deployment jobs on a different branch before merging
+  filter-branch:
+    type: string
+    default: noetic
+
 workflows:
   version: 2
   pushbuild:
@@ -49,5 +59,5 @@ workflows:
               only:
                 - << pipeline.parameters.filter-branch >>
           requires:
-#            - arm64_debian_build
-            - amd_debian_build
+           - arm64_debian_build
+           - amd_debian_build
